Enhance model configuration and training logs
- Added new parameters for diffusion head support in `resolved_config.json` to improve model capabilities.
- Updated `selfopt_cache.json` and `selfopt_decisions.jsonl` to include detailed runtime plans and batch configurations for training.
- Enhanced training logs in `train.jsonl` to capture additional metrics and performance data.
- Updated timestamps in summary and log files to reflect the latest run.
- Improved overall structure and clarity of configuration files for better maintainability.

--- a/runs/mac_fw100m_l12_baseline_s1337/resolved_config.json
+++ b/runs/mac_fw100m_l12_baseline_s1337/resolved_config.json
@@ -5,7 +5,17 @@
   "d_ff": 600,
   "d_model": 128,
   "decoupled_gate": true,
+  "decoupled_gate_dynamic": true,
   "device": "mps",
+  "diffusion_head": false,
+  "diffusion_head_cfg_dropout_p": 0.1,
+  "diffusion_head_cfg_guidance_scale": 1.5,
+  "diffusion_head_loss_weight": 0.1,
+  "diffusion_head_mlp_mult": 4,
+  "diffusion_head_num_infer_steps": 12,
+  "diffusion_head_num_train_timesteps": 1000,
+  "diffusion_head_scheduler": "ddim",
+  "diffusion_head_time_embed_dim": 128,
   "dim_multiplier": 0,
   "dropout": 0.0,
   "embed_dim": 32,
@@ -22,7 +32,17 @@
     "d_ff": 600,
     "d_model": 128,
     "decoupled_gate": true,
+    "decoupled_gate_dynamic": true,
     "device": "mps",
+    "diffusion_head": false,
+    "diffusion_head_cfg_dropout_p": 0.1,
+    "diffusion_head_cfg_guidance_scale": 1.5,
+    "diffusion_head_loss_weight": 0.1,
+    "diffusion_head_mlp_mult": 4,
+    "diffusion_head_num_infer_steps": 12,
+    "diffusion_head_num_train_timesteps": 1000,
+    "diffusion_head_scheduler": "ddim",
+    "diffusion_head_time_embed_dim": 128,
     "dim_multiplier": 0,
     "dropout": 0.0,
     "embed_dim": 32,
@@ -39,6 +59,12 @@
     "rope_base": 10000.0,
     "sem_dim": 104,
     "tie_qk": false,
+    "train_long_seq_enabled": true,
+    "train_long_seq_local_window": null,
+    "train_long_seq_mem_block": null,
+    "train_long_seq_mem_summarizer": "conv",
+    "train_long_seq_q_chunk": null,
+    "train_long_seq_threshold": null,
     "vocab_size": 50257
   },
   "n_head": 4,
@@ -62,6 +88,15 @@
     "data": "fineweb_100m.npy",
     "data_dtype": "int64",
     "data_format": "auto",
+    "diffusion_head": false,
+    "diffusion_head_cfg_dropout_p": 0.1,
+    "diffusion_head_cfg_guidance_scale": 1.5,
+    "diffusion_head_loss_weight": 0.1,
+    "diffusion_head_mlp_mult": 4,
+    "diffusion_head_num_infer_steps": 12,
+    "diffusion_head_num_train_timesteps": 1000,
+    "diffusion_head_scheduler": "ddim",
+    "diffusion_head_time_embed_dim": 128,
     "dropout": 0.0,
     "embed_dim": 256,
     "eval_every": 0,
@@ -109,5 +144,11 @@
     "warmup_steps": 0,
     "weight_decay": 0.1
   },
+  "train_long_seq_enabled": true,
+  "train_long_seq_local_window": null,
+  "train_long_seq_mem_block": null,
+  "train_long_seq_mem_summarizer": "conv",
+  "train_long_seq_q_chunk": null,
+  "train_long_seq_threshold": null,
   "vocab_size": 50257
 }
