--- a/caramba/config/presets/dba.yml
+++ b/caramba/config/presets/dba.yml
@@ -13,21 +13,29 @@ defaults:
   save_every: 0
 model:
   type: transformer
-  network:
+  topology:
     type: stacked
     layers:
       - type: linear
-        d_in: 128
-        d_out: 128
-        bias: true
+        operation: {type: matmul}
+        weight:
+          type: dense
+          d_in: 128
+          d_out: 128
+          bias: true
       - type: layer_norm
-        d_model: 128
-        eps: 1e-5
-        elementwise_affine: true
+        operation: {type: layer_norm, eps: 1e-5}
+        weight:
+          type: norm
+          d_model: 128
+          elementwise_affine: true
       - type: multihead
-        d_model: 128
-        n_heads: 4
-        dropout: 0.1
+        operation: {type: multihead}
+        weight:
+          type: multihead
+          d_model: 128
+          n_heads: 4
+          dropout: 0.1
 groups:
   - name: default
     description: Default group
