--- a/caramba/config/presets/llama32_1b_dba.yml
+++ b/caramba/config/presets/llama32_1b_dba.yml
@@ -77,7 +77,7 @@ model:
 groups:
   - name: upcycle
     description: "DBA upcycle from Llama 3.2 1B."
-    data: "data/fineweb_sample.npy"
+    data: "fineweb_100m.npy"
     runs:
       - id: blockwise
         mode: train
@@ -86,7 +86,17 @@ groups:
         steps: 500
         expected:
           phase: blockwise
-          teacher_ckpt: "weights/llama32-1b"
+        train:
+          phase: blockwise
+          batch_size: 1
+          block_size: 2048
+          lr: 0.0001
+          device: cpu
+          dtype: float32
+          # Use a local path or an hf:// URI:
+          # hf://org/repo/path/to/file.safetensors@revision
+          # hf://meta-llama/Llama-3.2-1B
+          teacher_ckpt: "hf://meta-llama/Llama-3.2-1B"
       - id: finetune
         mode: train
         exp: dba_finetune
@@ -94,4 +104,10 @@ groups:
         steps: 2000
         expected:
           phase: global
-          resume_from: blockwise
+        train:
+          phase: global
+          batch_size: 1
+          block_size: 2048
+          lr: 0.00005
+          device: cpu
+          dtype: float32
