Update requirements and refactor benchmark memory handling
- Removed specific version for `tensordict` in `requirements.txt` to allow for flexibility in dependency management.
- Refactored `ComparisonSummary` in `artifacts.py` to store KV-cache sizes in bytes instead of MB, improving precision for memory calculations.
- Updated tests in `artifacts_test.py` to reflect changes in KV-cache size representation.
- Introduced a utility function in `utils.py` for consistent vocabulary size retrieval from models, enhancing code reusability.
- Improved error handling in `latency.py` and `memory.py` by utilizing the new utility function for vocabulary size.
- Enhanced logging in various modules to provide better insights during execution and debugging.

--- a/caramba/config/presets/llama32_1b_dba.yml
+++ b/caramba/config/presets/llama32_1b_dba.yml
@@ -56,6 +56,7 @@ defaults:
 
 model:
   type: TransformerModel
+  tied_embeddings: false
   embedder:
     type: token
     vocab_size: "${vocab_size}"
@@ -151,7 +152,8 @@ groups:
           phase: global
         verify:
           type: eval
-          tokenizer: llama
+          tokenizer:
+            type: llama
           max_new_tokens: 32
           thresholds:
             min_student_accuracy: 0.7
