Refactor CLI command parsing and enhance paper drafting logic
- Introduced a type alias `AnyCommand` in `caramba/cli.py` to simplify command parsing.
- Updated the `parse_command` method to return `AnyCommand` for better type clarity.
- Improved error handling when loading `report.json` in `caramba/experiment/runner.py`, specifying exceptions for better logging.
- Enhanced the paper drafting process in `caramba/paper/drafter.py` by removing unnecessary parameters in prompt building methods.
- Updated the `ResearchLoop` class to improve style fix preparation and iteration handling.
- Refined review submission logic in `caramba/paper/review.py` to ensure proper validation of scores and recommendations.
- Added tests for the `LivePlotter` to verify metric alignment during updates, ensuring robustness in visualization features.

--- a/caramba/config/presets/llama32_1b_dba_paper.yml
+++ b/caramba/config/presets/llama32_1b_dba_paper.yml
@@ -57,8 +57,7 @@ paper:
   enabled: true
   title: "Decoupled Bottleneck Attention: Efficient KV-Cache Compression via Attention Surgery"
   authors:
-    - "Your Name"
-    - "Collaborator Name"
+    - "Daniel Owen van Dommelen"
   paper_type: paper
 
   # Sections to include
